--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -14,6 +14,14 @@
     background: #000000;
 }
 
+/*
+  I know this is fucking dirty as hell but im desperate :D
+  todo fix template7 bug
+ */
+.books > .book:nth-last-of-type(-n+2) {
+  display: none;
+}
+
 .book {
   background: #fff;
   box-shadow: 0 1px 2px rgba(0,0,0,.3);
