--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -22,6 +22,10 @@
   display: none;
 }
 
+.content-block {
+  margin-top: 10px;
+}
+
 .book {
   background: #fff;
   box-shadow: 0 1px 2px rgba(0,0,0,.3);
