Changed layout of add page
Scan button is on the top right now

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -18,6 +18,10 @@
   box-shadow: none !important;
 }
 
+.list-block ul:before {
+  background: none;
+}
+
 /*
   I know this is fucking dirty as hell but im desperate :D
   todo fix template7 bug
