Added click event on eye and star. When clicked, a class is added (to change colour) and value in db is updated

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -68,11 +68,13 @@
   position: absolute;
   top: 5px;
   right: 2px;
-  /*color: #888 !important;*/
+  color: #888;
+}
+.book .book-info .book-favorite.favorite {
+  color: #ffeb3b;
 }
 .book .book-info .book-favorite i {
   font-size: 20px;
-  color: #888;
 }
 .book .book-title {
   font-weight: bold;
@@ -91,7 +93,7 @@
   color: #f06292;
 }
 
-.book .book-info .book-read.watched {
+.book .book-info .book-read.read {
   color: #69f0ae;
 }
 
